less-tabs/options.css
/* Describes Less Tabs popup style
 * Author: swolewizard
 */
body 
{
	white-space: nowrap;
	font-family: 'Lato'; /* Chrome supports Google fonts */
	font-size: 100%;
	transition: opacity 0.2s;
	padding: 10px;
}

input[type=number]
{
	width: 30px;
	border: 0;
}

/* Always show spinner for number input */
#tabLimit[type=number]::-webkit-inner-spin-button,
#tabLimit[type=number]::-webkit-outer-spin-button 
{
	opacity: 1;
}

#title
{
	font-size: 130%;
}

/* Test custom checkbox: Credit w3schools */

/* Customize the checkbox */
.checkbox {
  display: block;
  position: relative;
  padding-left: 35px;
  margin-bottom: 12px;
  cursor: pointer;
  font-size: 22px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

/* Hide the browser's default checkbox */
.checkbox input {
  position: absolute;
  opacity: 0;
  cursor: pointer;
}

/* Create a custom checkbox */
.checkmark {
  position: absolute;
  top: 0;
  left: 0;
  height: 25px;
  width: 25px;
  background-color: #eee;
}

/* On mouse-over, add a grey background color */
.checkbox:hover input ~ .checkmark {
  background-color: #ccc;
}

/* When the checkbox is checked, add a blue background */
.checkbox input:checked ~ .checkmark {
  background-color: #2196F3;
}

/* Create the checkmark/indicator (hidden when not checked) */
.checkmark:after {
  content: "";
  position: absolute;
  display: none;
}

/* Show the checkmark when checked */
.checkbox input:checked ~ .checkmark:after {
  display: block;
}

/* Style the checkmark/indicator */
.checkbox .checkmark:after {
  left: 9px;
  top: 5px;
  width: 5px;
  height: 10px;
  border: solid white;
  border-width: 0 3px 3px 0;
  -webkit-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  transform: rotate(45deg);
}

